UPDATE: Added Built binary

--- a/tasks.json
+++ b/tasks.json
@@ -9,7 +9,11 @@
       "taskName": "Hello",
       "taskDescription": "Add task",
       "taskDone": true
+    },
+    {
+      "taskName": "Hello world",
+      "taskDescription": "demo",
+      "taskDone": false
     }
   ]
 }
-
