UPDATE: just an update

--- a/tasks.json
+++ b/tasks.json
@@ -6,14 +6,14 @@
       "taskDone": false
     },
     {
-      "taskName": "Hello",
-      "taskDescription": "Add task",
-      "taskDone": true
-    },
-    {
       "taskName": "Hello world",
       "taskDescription": "demo",
       "taskDone": false
+    },
+    {
+      "taskName": "I LOVE YOU LOVEYYYY",
+      "taskDescription": "MY LOVEYYYY",
+      "taskDone": true
     }
   ]
 }
